[package]
name = "float-quickly"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/recatek/float-quickly"
license = "MIT OR Apache-2.0"

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]

[dependencies]

[dev-dependencies]
paste = "1.0.7"
criterion = "0.3"
libm = "0.2.2"

[[bench]]
name = "benches"
harness = false
